# aws-agentcore-TriBalance

./: .env.example  .gitignore  README.md
docs/: guide.md
docs/superpowers/plans/: 2026-04-21-tribalance-init.md
docs/superpowers/specs/: 2026-04-21-tribalance-init-design.md
mockups/: index.html  option-a-operator.html  option-b-dossier.html  option-c-atlas.html
scripts/: invoke_local.sh  provision_s3.sh  upload_sample.sh
tribalance/: AGENTS.md  README.md  dev.sh
tribalance-frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
tribalance-frontend/src/: App.tsx  main.tsx
tribalance-frontend/src/hooks/: useSSE.ts
tribalance-proxy/: README.md  app.py  cdk.json  pyproject.toml  run.sh
tribalance-proxy/handler/: app.py  cors.py  invoke.py  main.py  presign.py  pyproject.toml
tribalance-proxy/infra/: stack.py
tribalance-proxy/tests/: test_app.py  test_invoke.py  test_presign.py  test_stack.py
tribalance/agentcore/: agentcore.json  aws-targets.json
tribalance/app/TriBalanceAgent/: .dockerignore  Dockerfile  README.md  events.py  graph.py  main.py  pyproject.toml  state.py
tribalance/app/TriBalanceAgent/infra/: code_interpreter.py  llm.py  logging_config.py  s3.py  secrets.py
tribalance/app/TriBalanceAgent/nodes/: _codegen.py  activity.py  fetch.py  parse.py  plan.py  sleep.py  synthesize.py
tribalance/app/TriBalanceAgent/prompts/: code_synthesis_activity.md  code_synthesis_sleep.md  plan_generator.md
tribalance/app/TriBalanceAgent/tests/: test_activity.py  test_code_interpreter.py  test_fetch.py  test_graph.py  test_llm.py  test_parse.py  test_plan.py  test_s3.py  test_secrets.py  test_sleep.py  test_synthesize.py
tribalance/app/TriBalanceAgent/tests/fixtures/: activity_sample.csv  export_sample.xml  sleep_sample.csv
(+17 files in other folders)
