[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TriBalanceAgent"
version = "0.1.0"
description = "AgentCore Runtime agent for Apple Health weekly report (sleep + activity)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aws-opentelemetry-distro>=0.12.0",
    "bedrock-agentcore>=1.6.0",
    "boto3>=1.42.0",
    "botocore[crt]>=1.35.0",
    "langchain-aws>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.100",
    "lxml>=5.3.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
